--- a/_modules/pynegf/pynegf.html
+++ b/_modules/pynegf/pynegf.html
@@ -142,6 +142,9 @@
         <span class="c1"># Init parameters to default</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">params</span> <span class="o">=</span> <span class="n">PyNegf</span><span class="o">.</span><span class="n">LNParams</span><span class="p">()</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">get_params</span><span class="p">()</span>
+        <span class="c1"># Note: this fixes an issue in libnegf: np_real is not</span>
+        <span class="c1"># correctly initialized.</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">params</span><span class="o">.</span><span class="n">np_real</span> <span class="o">=</span> <span class="nb">tuple</span><span class="p">([</span><span class="mi">0</span><span class="p">]</span> <span class="o">*</span> <span class="mi">11</span><span class="p">)</span>
 
     <span class="k">def</span> <span class="fm">__del__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Clean up the library when the wrapper is collected.&quot;&quot;&quot;</span>
